Prevent exam time from wrapping

--- a/app/Resources/public/css/style.css
+++ b/app/Resources/public/css/style.css
@@ -253,3 +253,7 @@
     font-weight: 500;
     text-align: center;
 }
+
+.examTime {
+    white-space: nowrap;
+}
